--- a/jQueryExample/$(p).hide().html
+++ b/jQueryExample/$(p).hide().html
@@ -3,16 +3,18 @@
 <script type="text/javascript" src="D:/Workspaces/SourceCode/Github/StudyCode/js/jquery-3.3.1.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
-  $("button").click(function(){
-  $(this).hide(); 
+$("button").click(function(){
+$("p").hide();
 });
 });
 </script>
 </head>
 
 <body>
-<p>演示 jQuery 的 hide() 函数，隐藏当前的 HTML 元素。</p>
+<h2>This is a heading</h2>
+<h3>演示 jQuery 的 hide() 函数，隐藏所有p元素。</h3>
+<p>This is a paragraph.</p>
+<p>This is another paragraph.</p>
 <button type="button">Click me</button>
 </body>
-
-</html>
+</html> 
