--- a/jQueryExample/改变多个CSS属性.html
+++ b/jQueryExample/改变多个CSS属性.html
@@ -4,14 +4,16 @@
 <script type="text/javascript">
 $(document).ready(function(){
   $("button").click(function(){
-  $(this).hide(); 
-});
+    $("p").css({"background-color":"red","font-size":"200%"});
+  });
 });
 </script>
 </head>
 
 <body>
-<p>演示 jQuery 的 hide() 函数，隐藏当前的 HTML 元素。</p>
+<h2>This is a heading</h2>
+<p>This is a paragraph.</p>
+<p>This is another paragraph.</p>
 <button type="button">Click me</button>
 </body>
 
