--- a/jQueryExample/$(test).hide().html
+++ b/jQueryExample/$(test).hide().html
@@ -4,14 +4,17 @@
 <script type="text/javascript">
 $(document).ready(function(){
   $("button").click(function(){
-  $(this).hide(); 
-});
+    $("#test").hide();
+  });
 });
 </script>
 </head>
 
 <body>
-<p>演示 jQuery 的 hide() 函数，隐藏当前的 HTML 元素。</p>
+<h2>This is a heading</h2>
+<h3>演示 jQuery 的 hide() 函数，隐藏 id="test" 的元素。</h3>
+<p>This is a paragraph.</p>
+<p id="test">This is another paragraph.</p>
 <button type="button">Click me</button>
 </body>
 
