--- a/jQueryExample/改变html元素内容.html
+++ b/jQueryExample/改变html元素内容.html
@@ -4,15 +4,17 @@
 <script type="text/javascript">
 $(document).ready(function(){
   $("button").click(function(){
-  $(this).hide(); 
-});
+  $("p").html("W3School");
+  });
 });
 </script>
 </head>
 
 <body>
-<p>演示 jQuery 的 hide() 函数，隐藏当前的 HTML 元素。</p>
-<button type="button">Click me</button>
+<h2>This is a heading</h2>
+<p>This is a paragraph.</p>
+<p>This is another paragraph.</p>
+<button type="button">请点击这里</button>
 </body>
 
 </html>
